samples/_failures_safe/1761656611_b8705f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b706e76.c: In function ‘main’:
./samples/SAFE/__tmp_5b706e76.c:134:5: error: expected declaration or statement at end of input
  134 |     printf("==============================\n");
      |     ^~~~~~
